--- a/jekyll/config.dist.yml
+++ b/jekyll/config.dist.yml
@@ -1,5 +1,6 @@
 source      : ./dev
-destination : ./dist
+destination : ./dev/_statics
+exclude     : ['icons', 'assets', 'scripts', 'stylesheets']
 name        : Jekyll Starter
 author      : Paulo Campos
 baseUrl     : http://localhost:4000
