--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "compile:dev": "concurrently \"jekyll build --config ./jekyll/config.dev.yml\" \"gulp compile:dev\"",
     "compile:dist": "concurrently \"jekyll build --config ./jekyll/config.dist.yml\" \"gulp compile:dist\"",
-    "compile:prod": "concurrently \"jekyll build --config ./jekyll/config.prod.yml\" \"gulp compile:dist\"",
     "serve:dev": "concurrently \"jekyll build --config ./jekyll/config.dev.yml --watch\" \"gulp serve:dev\"",
     "serve:dist": "concurrently \"jekyll build --config ./jekyll/config.dist.yml\" \"gulp serve:dist\""
   },
@@ -23,27 +22,22 @@
   },
   "homepage": "https://github.com/paulo-campos/jekyll-starter#readme",
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.0",
-    "browser-sync": "^2.18.6",
-    "concurrently": "^3.4.0",
+    "browser-sync": "^2.18.13",
+    "coffee-script": "^1.12.7",
+    "concurrently": "^3.5.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-compass": "^2.1.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-if": "^2.0.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-rimraf": "^0.2.1",
-    "gulp-uglify": "^2.0.1",
     "gulp-useref": "^3.1.2",
     "run-sequence": "^1.2.2"
   },
   "dependencies": {
-    "jquery": "^3.2.1",
-    "normalize.css": "^5.0.0"
+    "jquery": "^3.2.1"
   },
   "engines": {
-    "node": ">=6.9.4",
-    "npm": "^4.1.1"
+    "node": "^6.11.3",
+    "npm": "^5.4.2"
   },
   "license": "MIT"
 }
